# raspberry_prisma_Walker

./: Actuators.hpp  CMakeLists.txt  Environment.cpp  HebiReproduceTraj.py  README.md  dynamixel.cpp  feedforward.cpp  getActuatorData.cpp  main_real.cpp  motors_command  pos_m1_18s.txt  pos_m2_18s.txt  requirements.txt  tester.py
dataset/4_dic/: m1_pos.txt  m1_torques.txt  m1_vel.txt  m2_pos.txt  m2_torques.txt  m2_vel.txt
dataset/5_dic/: m1_pos.txt  m1_torques.txt  m1_vel.txt  m2_pos.txt  m2_torques.txt  m2_vel.txt
dataset/large_step/: m1_pos.txt  m1_vel.txt  m2_pos.txt  m2_vel.txt
dataset/large_step2/: m1_pos.txt  m1_vel.txt  m2_pos.txt  m2_vel.txt
dataset/longer_step/: m1_pos.txt  m1_torques.txt  m1_vel.txt  m2_pos.txt  m2_torques.txt  m2_vel.txt
dataset/low_inertia/: m1_pos.txt  m1_torques.txt  m1_vel.txt  m2_pos.txt  m2_torques.txt  m2_vel.txt
dataset/low_inertia0/: m1_pos.txt  m1_torques.txt  m1_vel.txt  m2_pos.txt  m2_torques.txt  m2_vel.txt
dataset/low_inertia1/: m1_pos.txt  m1_torques.txt  m1_vel.txt  m2_pos.txt  m2_torques.txt  m2_vel.txt
dataset/low_step2/: m1_pos.txt  m1_vel.txt  m2_pos.txt  m2_vel.txt
dataset/low_step_1/: m1_pos.txt  m1_torques.txt  m1_vel.txt  m2_pos.txt  m2_torques.txt  m2_vel.txt
dataset/low_step_2/: m1_pos.txt  m1_torques.txt  m1_vel.txt  m2_pos.txt  m2_torques.txt  m2_vel.txt
dataset/scal_ric/: m1_pos.txt  m1_vel.txt  m2_pos.txt  m2_vel.txt
dataset/stepLungo/: m1_pos.txt  m1_torques.txt  m1_vel.txt  m2_pos.txt  m2_torques.txt  m2_vel.txt
dataset/stepLungo_1/: m1_pos.txt  m1_torques.txt  m1_vel.txt  m2_pos.txt  m2_torques.txt  m2_vel.txt
dataset/stepLungo_vincenzo/: m1_pos.txt  m1_torques.txt  m1_vel.txt  m2_pos.txt  m2_torques.txt  m2_vel.txt
dataset/torque/: m1_pos.txt  m1_torques.txt  m1_vel.txt  m2_pos.txt  m2_torques.txt  m2_vel.txt
dataset/walk/: m1_pos.txt  m1_vel.txt  m2_pos.txt  m2_vel.txt
directKinematics_prismaWalker/: kdl_2link  kdl_2link.cpp  posa_x.txt  posa_y.txt  posa_z.txt  requirements.txt
hebi-cpp/: CMakeLists.txt
hebi-cpp/hebi/: CMakeLists.txt
hebi-cpp/hebi/include/: hebi.h
hebi-cpp/hebi/lib/linux_aarch64/: libhebi.so.2  libhebi.so.2.9
hebi-cpp/hebi/lib/linux_x86_64/: libhebi.so.2.16  libhebi.so.2.9
hebi-cpp/hebi/lib/osx/: libhebi.2.16.dylib  libhebi.2.9.dylib  libhebi.dylib
hebi-cpp/hebi/lib/win_x64/: hebi.lib
hebi-cpp/hebi/lib/win_x86/: hebi.lib
hebi-cpp/rapidyaml/: rapidyaml-0.5.0.cpp
hebi-cpp/src/: command.cpp  command.hpp  group.cpp  group_command.cpp  group_feedback.cpp  group_info.cpp  info.cpp  info.hpp  message_helpers.cpp  robot_config.cpp  robot_model.cpp  robot_model.hpp  version.cpp
hebi-cpp/src/arm/: arm.cpp  arm.hpp  end_effector.hpp  kinematics_helper.cpp
hebi-cpp/src/util/: file.cpp  grav_comp.hpp  mobile_io.cpp  mobile_io.hpp
ppo/: __init__.py  module.py
